--- a/multi.html
+++ b/multi.html
@@ -12,7 +12,10 @@
      <h1>Welcome to multifunction website</h1>
      <p id="UserName"></p>
      <div id="Menu">
-        <button id="btn1" onclick="adder()">Show</button>
+        <button id="btn1" onclick="adder()">Add</button>
+        <button id="btn2" onclick="subtractor()">Subtract</button>
+        <button id="btn3" onclick="multiplier()">Multiply</button>
+        <button id="btn4" onclick="divider()">Divide</button>
      </div>
      <p id="result"></p>
 
