Added bubble sort button

--- a/multi.html
+++ b/multi.html
@@ -16,7 +16,8 @@
         <button id="btn2" onclick="subtractor()">Subtract</button>
         <button id="btn3" onclick="multiplier()">Multiply</button>
         <button id="btn4" onclick="divider()">Divide</button>
-        
+        <button id="btn5" onclick="bubbleSort()">Step-by-step bubble</button>
+
      </div>
      <p id="result"></p>
 
