--- a/multi.html
+++ b/multi.html
@@ -12,7 +12,7 @@
      <h1>Welcome to multifunction website</h1>
      <p id="Welcome"></p>
      <input type="text" id="inp">
-     <button id="enter">Enter</button>
+     <button id="enter" onclick="input()">Enter</button>
      <div id="Menu">
         <button id="btn1" onclick="adder()">Add</button>
         <button id="btn2" onclick="subtractor()">Subtract</button>
@@ -20,8 +20,7 @@
         <button id="btn4" onclick="divider()">Divide</button>
         <br>
         <button onclick = "mod()">Remainder</button>
-        <button id="btn5" onclick="quickSort()">Step-by-step quickSort</button>
-        <button id="btn6" onclick="mergeSort()">Step-by-step mergeSort</button>
+        
         <button id="btn7" onclick="clearResult()">Clear</button>
 
      </div>
